--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,47 @@ video#bgvid {
     height: auto;
     z-index: -100;
     transform: translateX(-50%) translateY(-50%);
-    background: url('') no-repeat;
+    background: no-repeat;
     background-size: cover;
     transition: 1s opacity;
 }
+
+.container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    background: rgba(171, 230, 238, 0.5);    
+}
+
+button{
+    position: relative;
+    display: block;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top:20px;
+}
+
+.placeAndScore {
+    margin-bottom:10px;
+}
+
+form {
+    padding: 20px;
+}
+
+.title {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+h1 {
+    text-shadow: rgb(90, 88, 233) 0 0 10px;
+}
+
+.errorMessage {
+    color: red;
+}
+
+
